kafka-eks/connectors/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-alb
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.kafka-ui: |
      {
        "type": "rewrite",
        "rewriteConfig": {
          "path": "/",
          "query": "{query}"
        }
      }
spec:
  rules:
  - http:
      paths:
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              name: use-annotation
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-connect-service
            port:
              number: 8083
